packages/typ/tests/fixtures/diagnostics/0156_adt_nested_annotation_mismatch_03.ml.infer.expected
File "0156_adt_nested_annotation_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0156_adt_nested_annotation_mismatch_03 is not a valid module name.

File "0156_adt_nested_annotation_mismatch_03.ml", line 2, characters 31-35:
2 | let _ : rec_gamma = { count = (true, 2); flag = true }
                                   ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
