packages/typ/tests/fixtures/diagnostics/0156_adt_nested_annotation_mismatch_03.ml
type rec_gamma = { count : int * bool; flag : bool }
let _ : rec_gamma = { count = (true, 2); flag = true }
